[gd_scene load_steps=33 format=3 uid="uid://dcm7wtj5ie8a8"]

[ext_resource type="PackedScene" uid="uid://dvwst02stxfna" path="res://src/assets/B2/SabaBananas_Fried.glb" id="1_58rha"]
[ext_resource type="Script" path="res://src/ois/Plate_Saba.gd" id="1_jxyf6"]
[ext_resource type="Texture2D" uid="uid://b4cij3rwar8be" path="res://src/assets/Fire/Voronoi01.png" id="2_vcntg"]
[ext_resource type="Texture2D" uid="uid://kdko7148y7hv" path="res://src/assets/Fire/Flame02.png" id="3_12i8x"]

[sub_resource type="CylinderMesh" id="CylinderMesh_4pm24"]

[sub_resource type="VisualShaderNodeMix" id="VisualShaderNodeMix_877b5"]
default_input_values = [0, Quaternion(0, 0, 0, 0), 1, Quaternion(1, 1, 1, 1), 2, Quaternion(0.5, 0.5, 0.5, 0.5)]
op_type = 5

[sub_resource type="VisualShaderNodeFloatParameter" id="VisualShaderNodeFloatParameter_vc15h"]
parameter_name = "DissolveAmount"
hint = 1

[sub_resource type="VisualShaderNodeUVFunc" id="VisualShaderNodeUVFunc_xmyl0"]

[sub_resource type="VisualShaderNodeVec2Parameter" id="VisualShaderNodeVec2Parameter_yym5u"]
parameter_name = "Dissolve_Speed"

[sub_resource type="VisualShaderNodeInput" id="VisualShaderNodeInput_vcbwk"]
input_name = "time"

[sub_resource type="VisualShaderNodeVectorOp" id="VisualShaderNodeVectorOp_v676e"]
default_input_values = [0, Vector2(0, 0), 1, Vector2(0, 0)]
op_type = 0
operator = 2

[sub_resource type="VisualShaderNodeVec2Parameter" id="VisualShaderNodeVec2Parameter_fbsqs"]
parameter_name = "Dissolve_Tilling"
default_value_enabled = true
default_value = Vector2(1, 1)

[sub_resource type="VisualShaderNodeInput" id="VisualShaderNodeInput_wbqac"]
input_name = "uv"

[sub_resource type="VisualShaderNodeVectorOp" id="VisualShaderNodeVectorOp_m168s"]
default_input_values = [0, Vector2(0, 0), 1, Vector2(0, 0)]
op_type = 0
operator = 2

[sub_resource type="VisualShaderNodeTexture2DParameter" id="VisualShaderNodeTexture2DParameter_7vvf2"]
parameter_name = "Main_Texture"

[sub_resource type="VisualShaderNodeTexture" id="VisualShaderNodeTexture_64o7i"]
source = 5

[sub_resource type="VisualShaderNodeVectorDecompose" id="VisualShaderNodeVectorDecompose_rlhd8"]
default_input_values = [0, Quaternion(0, 0, 0, 0)]
op_type = 2

[sub_resource type="VisualShaderNodeInput" id="VisualShaderNodeInput_cm71i"]
input_name = "color"

[sub_resource type="VisualShaderNodeVectorOp" id="VisualShaderNodeVectorOp_6qcl4"]
default_input_values = [0, Quaternion(0, 0, 0, 0), 1, Quaternion(0, 0, 0, 0)]
op_type = 2
operator = 2

[sub_resource type="VisualShaderNodeTexture2DParameter" id="VisualShaderNodeTexture2DParameter_25ksy"]
parameter_name = "Dissolve_Texture"

[sub_resource type="VisualShaderNodeTexture" id="VisualShaderNodeTexture_vs1ju"]
source = 5

[sub_resource type="VisualShaderNodeVectorOp" id="VisualShaderNodeVectorOp_b26ml"]
default_input_values = [0, Quaternion(0, 0, 0, 0), 1, Quaternion(0, 0, 0, 0)]
op_type = 2
operator = 2

[sub_resource type="VisualShaderNodeBillboard" id="VisualShaderNodeBillboard_sum1a"]
billboard_type = 3
keep_scale = true

[sub_resource type="VisualShader" id="VisualShader_jj1ys"]
code = "shader_type spatial;
render_mode blend_mix, depth_draw_opaque, cull_back, diffuse_lambert, specular_schlick_ggx, unshaded;

uniform sampler2D Main_Texture;
uniform vec2 Dissolve_Tilling = vec2(1.000000, 1.000000);
uniform vec2 Dissolve_Speed;
uniform sampler2D Dissolve_Texture;
uniform float DissolveAmount : hint_range(0, 1);



void vertex() {
	mat4 n_out2p0;
// GetBillboardMatrix:2
	{
		mat4 __wm = mat4(normalize(INV_VIEW_MATRIX[0]), normalize(INV_VIEW_MATRIX[1]), normalize(INV_VIEW_MATRIX[2]), MODEL_MATRIX[3]);
		__wm = __wm * mat4(vec4(cos(INSTANCE_CUSTOM.x), -sin(INSTANCE_CUSTOM.x), 0.0, 0.0), vec4(sin(INSTANCE_CUSTOM.x), cos(INSTANCE_CUSTOM.x), 0.0, 0.0), vec4(0.0, 0.0, 1.0, 0.0), vec4(0.0, 0.0, 0.0, 1.0));
		__wm = __wm * mat4(vec4(length(MODEL_MATRIX[0].xyz), 0.0, 0.0, 0.0), vec4(0.0, length(MODEL_MATRIX[1].xyz), 0.0, 0.0), vec4(0.0, 0.0, length(MODEL_MATRIX[2].xyz), 0.0), vec4(0.0, 0.0, 0.0, 1.0));
		n_out2p0 = VIEW_MATRIX * __wm;
	}


// Output:0
	MODELVIEW_MATRIX = n_out2p0;


}

void fragment() {
// Input:5
	vec4 n_out5p0 = COLOR;


	vec4 n_out3p0;
// Texture2D:3
	n_out3p0 = texture(Main_Texture, UV);


// Input:17
	vec2 n_out17p0 = UV;


// Vector2Parameter:16
	vec2 n_out16p0 = Dissolve_Tilling;


// VectorOp:18
	vec2 n_out18p0 = n_out17p0 * n_out16p0;


// Input:14
	float n_out14p0 = TIME;


// Vector2Parameter:13
	vec2 n_out13p0 = Dissolve_Speed;


// VectorOp:15
	vec2 n_out15p0 = vec2(n_out14p0) * n_out13p0;


// UVFunc:12
	vec2 n_in12p1 = vec2(1.00000, 1.00000);
	vec2 n_out12p0 = n_out15p0 * n_in12p1 + n_out18p0;


	vec4 n_out8p0;
// Texture2D:8
	n_out8p0 = texture(Dissolve_Texture, n_out12p0);


// VectorOp:9
	vec4 n_out9p0 = n_out3p0 * n_out8p0;


// FloatParameter:11
	float n_out11p0 = DissolveAmount;


// Mix:10
	vec4 n_out10p0 = mix(n_out3p0, n_out9p0, vec4(n_out11p0));


// VectorOp:6
	vec4 n_out6p0 = n_out5p0 * n_out10p0;


// VectorDecompose:4
	float n_out4p0 = n_out6p0.x;
	float n_out4p1 = n_out6p0.y;
	float n_out4p2 = n_out6p0.z;
	float n_out4p3 = n_out6p0.w;


// Output:0
	ALBEDO = vec3(n_out6p0.xyz);
	ALPHA = n_out4p3;


}
"
flags/unshaded = true
nodes/vertex/2/node = SubResource("VisualShaderNodeBillboard_sum1a")
nodes/vertex/2/position = Vector2(-20, 300)
nodes/vertex/connections = PackedInt32Array(2, 0, 0, 10)
nodes/fragment/0/position = Vector2(1120, 140)
nodes/fragment/2/node = SubResource("VisualShaderNodeTexture2DParameter_7vvf2")
nodes/fragment/2/position = Vector2(-660, 320)
nodes/fragment/3/node = SubResource("VisualShaderNodeTexture_64o7i")
nodes/fragment/3/position = Vector2(-280, 280)
nodes/fragment/4/node = SubResource("VisualShaderNodeVectorDecompose_rlhd8")
nodes/fragment/4/position = Vector2(720, 360)
nodes/fragment/5/node = SubResource("VisualShaderNodeInput_cm71i")
nodes/fragment/5/position = Vector2(-20, 40)
nodes/fragment/6/node = SubResource("VisualShaderNodeVectorOp_6qcl4")
nodes/fragment/6/position = Vector2(540, 120)
nodes/fragment/7/node = SubResource("VisualShaderNodeTexture2DParameter_25ksy")
nodes/fragment/7/position = Vector2(-720, 940)
nodes/fragment/8/node = SubResource("VisualShaderNodeTexture_vs1ju")
nodes/fragment/8/position = Vector2(-240, 860)
nodes/fragment/9/node = SubResource("VisualShaderNodeVectorOp_b26ml")
nodes/fragment/9/position = Vector2(80, 480)
nodes/fragment/10/node = SubResource("VisualShaderNodeMix_877b5")
nodes/fragment/10/position = Vector2(300, 280)
nodes/fragment/11/node = SubResource("VisualShaderNodeFloatParameter_vc15h")
nodes/fragment/11/position = Vector2(260, 540)
nodes/fragment/12/node = SubResource("VisualShaderNodeUVFunc_xmyl0")
nodes/fragment/12/position = Vector2(-720, 660)
nodes/fragment/13/node = SubResource("VisualShaderNodeVec2Parameter_yym5u")
nodes/fragment/13/position = Vector2(-1380, 760)
nodes/fragment/14/node = SubResource("VisualShaderNodeInput_vcbwk")
nodes/fragment/14/position = Vector2(-1400, 640)
nodes/fragment/15/node = SubResource("VisualShaderNodeVectorOp_v676e")
nodes/fragment/15/position = Vector2(-960, 660)
nodes/fragment/16/node = SubResource("VisualShaderNodeVec2Parameter_fbsqs")
nodes/fragment/16/position = Vector2(-1380, 400)
nodes/fragment/17/node = SubResource("VisualShaderNodeInput_wbqac")
nodes/fragment/17/position = Vector2(-1400, 300)
nodes/fragment/18/node = SubResource("VisualShaderNodeVectorOp_m168s")
nodes/fragment/18/position = Vector2(-960, 340)
nodes/fragment/connections = PackedInt32Array(2, 0, 3, 2, 4, 3, 0, 1, 5, 0, 6, 0, 6, 0, 0, 0, 7, 0, 8, 2, 3, 0, 9, 0, 8, 0, 9, 1, 6, 0, 4, 0, 3, 0, 10, 0, 9, 0, 10, 1, 10, 0, 6, 1, 11, 0, 10, 2, 12, 0, 8, 0, 14, 0, 15, 0, 13, 0, 15, 1, 15, 0, 12, 2, 17, 0, 18, 0, 16, 0, 18, 1, 18, 0, 12, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xd4uh"]
render_priority = 0
shader = SubResource("VisualShader_jj1ys")
shader_parameter/Dissolve_Tilling = Vector2(1, 1)
shader_parameter/Dissolve_Speed = null
shader_parameter/DissolveAmount = null
shader_parameter/Main_Texture = ExtResource("3_12i8x")
shader_parameter/Dissolve_Texture = ExtResource("2_vcntg")

[sub_resource type="Gradient" id="Gradient_twheo"]
offsets = PackedFloat32Array(0, 0.309091, 0.709091, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0.671053, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ipxr7"]
gradient = SubResource("Gradient_twheo")

[sub_resource type="Curve" id="Curve_v53j3"]
_data = [Vector2(0, 0), 0.0, 6.63461, 0, 0, Vector2(0.188406, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -0.919081, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_rxjis"]
curve = SubResource("Curve_v53j3")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_h5oue"]
resource_local_to_scene = true
lifetime_randomness = 0.05
emission_shape = 1
emission_sphere_radius = 0.3
angle_min = -360.0
angle_max = 360.0
spread = 16.981
gravity = Vector3(0, 2, 0)
damping_max = 1.0
scale_min = 0.1
scale_max = 0.3
scale_curve = SubResource("CurveTexture_rxjis")
color = Color(1, 1, 1, 0.0196078)
color_ramp = SubResource("GradientTexture1D_ipxr7")
hue_variation_min = 1.0
hue_variation_max = 1.0
anim_speed_max = 4.83

[sub_resource type="QuadMesh" id="QuadMesh_l46ry"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_1dmgk"]
height = 0.0278683
radius = 0.120267

[node name="Plate" type="Node3D"]
script = ExtResource("1_jxyf6")

[node name="MainMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.01, 0, 0, 0, 0.3, 0, 0, 0)
mesh = SubResource("CylinderMesh_4pm24")

[node name="SabaBananas_Fried" parent="MainMesh" instance=ExtResource("1_58rha")]
transform = Transform3D(0.666667, 0, 0, 0, 20, 0, 0, 0, 0.666667, -0.00200244, 2.85567, -0.0263204)
visible = false

[node name="Smoke" type="GPUParticles3D" parent="MainMesh/SabaBananas_Fried"]
transform = Transform3D(0.420345, 0, 0, 0, 0.420345, 0, 0, 0, 0.420345, 0.00443009, -0.144846, -0.0690639)
material_override = SubResource("ShaderMaterial_xd4uh")
amount = 5
speed_scale = 0.42
visibility_aabb = AABB(-0.5, -0.5, -0.5, 1, 1, 1)
process_material = SubResource("ParticleProcessMaterial_h5oue")
draw_pass_1 = SubResource("QuadMesh_l46ry")

[node name="PlateReceiver" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlateReceiver"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00598985, 1.49012e-08, 0.0038377)
shape = SubResource("CylinderShape3D_1dmgk")

[connection signal="area_entered" from="PlateReceiver" to="." method="_on_plate_receiver_area_entered"]
